test_suite/alan-2022-examples/failing/006620_mutation.alan
source DJ begin leave 7 "\"" 7 end
